--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">WaterMeterScanner</string>
-
+    <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_main">Main Activity</string>
+    <string name="title_activity_work_orders">Work Orders</string>
+    <string name="view_work_orders">View Work Orders</string>
 </resources>
